Fixed post date overflow on mobile

--- a/themes/schmopera/assets/sass/_post-list.scss
+++ b/themes/schmopera/assets/sass/_post-list.scss
@@ -101,6 +101,24 @@
       height: 40px;
     }
   }
+
+  .post--meta-date {
+    &:before {
+      content: "- ";
+    }
+  }
+
+  @include bp-mobile {
+    .post--meta-date:nth-child(5),
+    a + a + .post--meta-date {
+      display: block;
+      padding-left: 10px;
+
+      &:before {
+        content: "";
+      }
+    }   
+  }
 }
 
 .post--list-title {
